--- a/css/style.css
+++ b/css/style.css
@@ -188,21 +188,25 @@ header {
 
 .wrapper {
     text-align: center;
+    
 }
 
 .wrapper .time {
     background: rgba(255, 255, 255, 0.04);
-    padding: 10px 10px;
+    /* padding: 10px 10px; */
     margin-bottom: 10px;
+    font-family: 'Tomorrow', sans-serif;
 }
 
 .wrapper .label {
     margin-top: 20px;
+    font-family: 'Tomorrow', sans-serif;
+    font-weight: 700;
 }
 
 .time {
     color: #fff;
-    font-size: 1.3em;
+    font-size: 2.8em;
     font-weight: 700;
 }
 
@@ -216,6 +220,31 @@ header {
     margin-top: 50px;
     width: 80%;
 }
+
+.counter-wrapper{
+    width: 90%;
+}
+.counter-wrapper .time{
+    width: 5rem;
+    height: 5rem;
+    padding: 10px 10px;
+}
+
+.counter-wrapper2{
+    width: 70%;
+}
+.counter-wrapper2 .time{
+    width: 5rem;
+    height: 5rem;
+    padding: 10px 10px;
+}
+
+
+
+
+/* -============================================ */
+
+/* ================================================ */
 
 
 /* Counter end ----------------------------------------- */
